<resources>
    <string name="app_name">MiniMoneybox</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="log_out">log out</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_address_error">Please enter a correct email address</string>
    <string name="password_error">Please enter a correct password</string>
    <string name="full_name_error">Please enter your full name</string>
    <string name="input_valid">Input is valid!</string>
    <!--    Lottie files-->
    <string name="lottie_owl_coin_shower">owl_coin_shower.json</string>

    <!-- UserAccountsFragment -->
    <string name="User_Accounts">User Accounts</string>
    <string name="Hello">Hello %s!</string>
    <string name="Total_Plan_Value">Total Plan Value: %s</string>
    <string name="Plan_Value">Plan Value: %s</string>
    <string name="Moneybox">Moneybox: %s</string>
    <string name="Reload">Reload</string>
    <string name="You_have_no_accounts_yet">You have no accounts yet</string>
    <string name="No_data">No data</string>

    <!-- IndividualAccountFragment -->
    <string name="Individual_Account">Individual Account</string>
    <string name="add_10">Add £10</string>
    <string name="Payment_completed">Payment completed</string>

    <!-- General -->
    <string name="no_network_connection">No network connection</string>
    <string name="session_expired">Your session has expired. Please log in again.</string>
    <string name="Server_error">Service unavailable, please try again later</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="Your_session_expired_please_log_in_again">Your session expired, please log in again</string>
</resources>
